# blog

blog/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
blog/scss/: Footer.scss  Navbar.scss  index.scss
blog/src/: main.rs
blog/src/components/: footer.rs  navbar.rs
blog/style/: custom.css  custom.css.map  output.css  output.css.map
