[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
console_log = "1.0.0"
emojis = "0.6.1"
leptos = { version = "0.5.6", features = ["csr"] }
leptos_meta = { version = "0.5.7", feature = ["csr"] }
leptos_router = { version = "0.5.7", features = ["csr"] }
wasm-bindgen = "0.2.90"
